[#5] first implementation of lsl_players

--- a/test/test.config
+++ b/test/test.config
@@ -1,8 +1,23 @@
 [
-  {lsl,
+  {mnesia,
    [
-    {http_port, 8585},
-    {http_listener_count, 10}
+    {dir, "db"},
+    {debug, true}
+   ]
+  },
+  {sumo_db,
+   [
+    {wpool_opts, [{overrun_warning, 100}]},
+    {log_queries, true},
+    {query_timeout, 30000},
+    {storage_backends, []},
+    {stores, [{lsl_store_mnesia, sumo_store_mnesia, [{workers, 10}]}]},
+    {docs,
+     [
+      {lsl_players, lsl_store_mnesia}
+     ]
+    },
+    {events, []}
    ]
   },
   {lager,
@@ -18,6 +33,12 @@
    [
     {sasl_error_logger, false},
     {errlog_type, error}
+   ]
+  },
+  {lsl,
+   [
+    {http_port, 8585},
+    {http_listener_count, 10}
    ]
   }
 ].
