--- a/test/test.config
+++ b/test/test.config
@@ -14,7 +14,8 @@
     {stores, [{lsl_store_mnesia, sumo_store_mnesia, [{workers, 10}]}]},
     {docs,
      [
-      {lsl_players, lsl_store_mnesia}
+      {lsl_players, lsl_store_mnesia},
+      {lsl_sessions, lsl_store_mnesia}
      ]
     },
     {events, []}
