--- a/test/test.config
+++ b/test/test.config
@@ -14,8 +14,9 @@
     {stores, [{lsl_store_mnesia, sumo_store_mnesia, [{workers, 10}]}]},
     {docs,
      [
-      {lsl_players, lsl_store_mnesia},
-      {lsl_sessions, lsl_store_mnesia}
+      {lsl_players,   lsl_store_mnesia},
+      {lsl_sessions,  lsl_store_mnesia},
+      {lsl_matches,   lsl_store_mnesia}
      ]
     },
     {events, []}
