[#5] /ai-players and complete coverage

--- a/test/test.config
+++ b/test/test.config
@@ -40,7 +40,8 @@
   {lsl,
    [
     {http_port, 8585},
-    {http_listener_count, 10}
+    {http_listener_count, 10},
+    {ais, [lsl_ai_dumb, lsl_ai_rodolfo]}
    ]
   }
 ].
