[#23] First attempt at lsl_meta_SUITE

--- a/elvis.config
+++ b/elvis.config
@@ -27,9 +27,15 @@
                     #{regex => "^lsl(_[a-z][a-z0-9]*)*$",
                       ignore => [lsl]}
                   },
+                  {
+                    elvis_style,
+                    function_naming_convention,
+                    #{regex => "^([a-z][a-z0-9]*_?)*$"}
+                  },
                   {elvis_style, state_record_and_type},
                   {elvis_style, no_spec_with_records},
-                  {elvis_style, dont_repeat_yourself, #{min_complexity => 9}}
+                  {elvis_style, dont_repeat_yourself, #{min_complexity => 9}},
+                  {elvis_style, no_debug_call, #{ignore => []}}
                  ]
        },
       #{dirs => ["test"],
@@ -54,6 +60,11 @@
                     module_naming_convention,
                     #{regex => "^lsl_([a-z][a-z0-9]*_?)*(_SUITE)?$"}
                   },
+                  {
+                    elvis_style,
+                    function_naming_convention,
+                    #{regex => "^([a-z][a-z0-9]*_?)*$"}
+                  },
                   {elvis_style, state_record_and_type},
                   {elvis_style, no_spec_with_records}
                  ]
@@ -61,7 +72,7 @@
       #{dirs => ["."],
         filter => "Makefile",
         rules => [{elvis_project, no_deps_master_erlang_mk, #{ignore => []}},
-                  {elvis_project, git_for_deps_erlang_mk, #{ignore => [], regex => "https://.*"}}]
+                  {elvis_project, protocol_for_deps_erlang_mk, #{ignore => []}}]
        }
      ]
     }
