--- a/test/test.config
+++ b/test/test.config
@@ -13,13 +13,22 @@
     {storage_backends, []},
     {stores, [{lsl_store_mnesia, sumo_store_mnesia, [{workers, 10}]}]},
     {docs,
-     [
-      {lsl_players,   lsl_store_mnesia},
-      {lsl_sessions,  lsl_store_mnesia},
-      {lsl_matches,   lsl_store_mnesia}
-     ]
+      [
+        {lsl_players,  lsl_store_mnesia, #{module => lsl_players}},
+        {lsl_sessions, lsl_store_mnesia, #{module => lsl_sessions}},
+        {lsl_matches,  lsl_store_mnesia, #{module => lsl_matches}}
+      ]
     },
     {events, []}
+   ]
+  },
+  {cowboy_swagger,
+   [
+    {global_spec, #{swagger => "2.0",
+                    info => #{title => "SumoRest Test API"},
+                    basePath => ""
+                  }
+    }
    ]
   },
   {lager,
